...
    <RadioGroup
        android:id="@+id/radio_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/title_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/series_title_button"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/type_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/series_type_button" />
        <RadioButton
        android:id="@+id/genre_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre_button" />

        <TextView
            android:text="@string/sort_type_title"
...
    <RadioGroup
        android:id="@+id/alphabetical_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/a_z_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descending_sort_button"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/z_a_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ascending_sort_button" />

    </RadioGroup>

    <Button
        android:text="@string/save_changes_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/save_changes_button"
        android:onClick="onClick" />

    <Button
        android:text="@string/cancel_changes_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_changes_button"
        android:onClick="onClick" />

</LinearLayout>

