...
        android:onClick="onClick" />

    <Button
        android:text="@string/myArchive_settings"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:id="@+id/my_archive_settings"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClick" />

    <ListView
        android:id="@+id/my_archive_list"
...
