...
    <string name="add_a_new_series">Add a new Series</string>
    <string name="genre_field">Genre</string>
    <string name="name_of_series">Name of Series</string>
    <string name="show_type">Show Type</string>
    <string name="add_series">Add Series</string>
    <string name="cancel">Cancel Addition</string>
    <string name="no">No</string>
    <string name="series_not_found_message">The series you entered in does not exist. Would you like to add the series into the database?</string>
    <string name="yes">Yes</string>
    <string name="series_addition_message">Enter information on the series you will be adding:</string>
    <string name="series_name_bar">Enter Series Name</string>
    <string name="sean_homepage">SEAN: Series Entertainment Archive Network</string>
    <string name="search_option">Search for a series</string>
...
    <string name="bookmark_button">Bookmark</string>
    <string name="add_a_series">Add a Series</string>
    <string name="back">Back</string>
    <string name="search_databasePage">Search</string>
    <string name="back_out_myArchive">Back</string>
    <string name="myArchive_settings">Archive Settings</string>
    <string name="my_archive_settings">My Archive Settings</string>
    <string name="notification_button">notification settings</string>
    <string name="appearance_button">appearance settings</string>
    <string name="settings">App Settings</string>
    <string name="profile_button_settings">Access My Profile</string>
    <string name="go_to_my_profile">Go to My Profile</string>
    <string name="return_to_home_page">Return to Home Page</string>
...
