<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchPage">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="sean.itr1.SearchPage">


        <TextView
            android:text="@string/app_greeting_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/Greeting"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:gravity="center_horizontal" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/search_show_title"
            android:hint="@string/series_name_bar"
            android:textAlignment="center"
            android:gravity="center_vertical|center_horizontal"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:layout_above="@+id/search_confirm_basic"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="@string/search"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/search_confirm_basic"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:onClick="onClick"/>

        <Button
            android:text="@string/add_a_new_series"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/add_new_series_button"
            android:layout_below="@+id/search_confirm_basic"
            android:layout_centerHorizontal="true"
            android:onClick="onClick"/>

        <Button
            android:text="@string/homepage_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_new_series_button"
            android:layout_alignRight="@+id/search_confirm_basic"
            android:layout_alignEnd="@+id/search_confirm_basic"
            android:id="@+id/return_home_button"
            android:onClick="onClick" />

        <TextView
            android:text="Welcome!"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/current_build"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>