...
        android:layout_marginTop="10dp" />

    <Button
        android:text=""
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/imdb"
        android:onClick="onClick"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <Button
        android:text=""
...
    <Button
        android:text="@string/back_button_appearance"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/return_to_list"
        android:onClick="onClick"
        android:layout_below="@+id/edit_urls"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/url_edit_page_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
...
