...
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:ems="10"
            android:id="@+id/imdb_url_input"
            android:hint="@string/imdb_url"
            android:gravity="center_vertical|center_horizontal"
            android:layout_above="@+id/confirm_imdb_url"
            android:layout_alignStart="@+id/wiki_url_input" />

        <Button
            android:text="@string/add_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
