...
            android:layout_centerHorizontal="true" />

        <Button
            android:text="@string/add_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_series_to_database"
            android:onClick="onClick"
            android:layout_below="@+id/check_box"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="@string/cancel"
...
